# byteir

./: .gitattributes  .gitignore  .gitmodules  NOTICE  README-zh_cn.md  README.md  requirements.txt
.codebase/pipelines/: build_and_lit_test.sh  build_scm.sh  build_scm_for_revert.sh  check.yaml  ci.sh  ci.yaml  clang_format_check.sh  common.sh  daily_ci.yaml  daily_copybara.yaml  e2e_ci.yaml  onnx_frontend_ci.yaml  onnx_frontend_release.yaml  open_source_check.py  prepare.sh  tf_frontend_ci.yaml  tf_frontend_release.yaml  torch_frontend_ci.yaml  torch_frontend_release.yaml
cmake/: CMakeLists.txt  MLIR.cmake  mhlo.cmake
compiler/: README.md  out.ptx  requirements.txt
compiler/cmake/: CMakeLists.txt  mhlo.cmake
compiler/doc/: byteir_mhlo_custom_call.md  linalg.md  mhlo-to-nvvm.md
compiler/lib/Pipelines/: AffineOpt.cpp  AllOpt.cpp  ByreHost.cpp  ByreOpt.cpp  CMakeLists.txt  HloOpt.cpp  LinalgTensorOpt.cpp  SCFOpt.cpp  ShapeOpt.cpp  TotalBufferize.cpp
compiler/lib/Pipelines/Common/: Utils.cpp
compiler/lib/Pipelines/GPU/: GPUOpt.cpp  LinalgMemrefGPU.cpp  NVVMCodegen.cpp  ReductionCodegen.cpp
compiler/lib/Pipelines/Host/: CMakeLists.txt  Codegen.cpp  HostOpt.cpp  ToLLVM.cpp
compiler/numerical/: requirements.txt
compiler/python/: CMakeLists.txt
compiler/tools/: CMakeLists.txt
compiler/tools/textloader/: CMakeLists.txt
doc/: mhlo-to-nvvm.md
frontends/: README.md
frontends/onnx-frontend/: .gitignore  CMakeLists.txt  README.md  envsetup.sh  requirements.txt
frontends/tf-frontend/: .bazelrc  .bazelversion  README.md  WORKSPACE  requirements.txt
frontends/torch-frontend/: CMakeLists.txt  requirements.txt  torch-requirements.txt
include/byteir/: CMakeLists.txt
lib/: CMakeLists.txt
lib/Analysis/: CMakeLists.txt  DimFlag.cpp  Liveness.cpp  OpDependence.cpp  ShapeAnalysis.cpp  SideEffect.cpp  SymbolicShape.cpp  UseRange.cpp
lib/Conversion/: CMakeLists.txt  PassDetail.h
lib/Dialect/: CMakeLists.txt
lib/Pipelines/: AffineOpt.cpp  AllOpt.cpp  ByreHost.cpp  ByreOpt.cpp  CMakeLists.txt  Common.cpp  GPUOpt.cpp  HloOpt.cpp  LinalgOpt.cpp  LinalgTensorOpt.cpp  NVVMCodegen.cpp  PassDetail.h  SCFOpt.cpp  ShapeOpt.cpp  TotalBufferize.cpp
lib/Pipelines/GPU/: CMakeLists.txt  GPUOpt.cpp  LinalgMemrefGPU.cpp  NVVMCodegen.cpp  PassDetail.h
lib/Pipelines/Host/: CMakeLists.txt  HostOpt.cpp  PassDetail.h  ToLLVM.cpp
lib/Stat/: CMakeLists.txt
lib/Transforms/: AnchoredFuncPipeline.cpp  CMAE.cpp  CMakeLists.txt  CanonicalizeExt.cpp  CollectFunc.cpp  CondCanonicalize.cpp  FuncTag.cpp  GenericDeviceConfig.cpp  GraphClusteringByDevice.cpp  LoopTag.cpp  LoopUnroll.cpp  MemoryPlanning.cpp  PassDetail.h  RemoveFuncBody.cpp  RewriteOpToStdCall.cpp  SetArgShape.cpp  SetArgSpace.cpp  SetSpace.cpp
lib/Utils/: AttrUtils.cpp  CMakeLists.txt  FuncUtils.cpp  Hoist.cpp  IRRewrite.cpp  LoopUtils.cpp  MemUtils.cpp  PipelineUtils.cpp  Utils.cpp
python/: CMakeLists.txt
python/byteir/ir/: __init__.py  executor.py  helper.py
python/byteir/ir/backend/: __init__.py  mhlo.py  tf.py
python/byteir/utils/: golden_ref.py
python/examples/calc_golden/: README.md  main.py
python/test/: CMakeLists.txt  test_golden_ref.py  test_ir_executor.py
python/test/helpers/: registry.py
runtime/: README.md
runtime/cmake/: brt_provider_cuda.cmake  brt_session.cmake  brt_unittests.cmake
scripts/: compile.py
test/: CMakeLists.txt  lit.cfg.py
test/Analysis/: testPrintArgSideEffect.mlir  testPrintLiveness.mlir  testPrintShapeAnalysis.mlir  testPrintSymbolicShape.mlir  testPrintUseRange.mlir
test/E2E/: conv.mlir  dot.mlir
test/NumericalTest/: canonicalize_ext.mlir  conv_bn.mlir  hlo_fold.mlir
test/Stat/: allocCnt.mlir  opCnt.mlir
test/Transforms/: boundedShapeInference.mlir  bufferReuse.mlir  canonicalizeExt.mlir  cmae.mlir  collectFunc.mlir  funTag.mlir  genericDeviceConfig.mlir  gereicDeviceConfig_with_ByreOpt.mlir  graphClusteringByDevice.mlir  loopTag.mlir  loopUnrollUseAnchor.mlir  loopUnrollUseDepth.mlir  memoryPlanning.mlir  removeFuncBody.mlir  rewriteOpToStdCall.mlir  setAllSpace.mlir  setArgShape.mlir  setArgSpace.mlir  setOpAndArgSpace.mlir  setOpSpace.mlir  shapeReification.mlir  staticShapeInference.mlir
test/lib/: CMakeLists.txt
tools/: CMakeLists.txt
(+1443 files in other folders)
